# dirac

./: .gitignore  AGENTS.md  README.md  TREE.txt  bot.py  config.example.toml  doctor.py  pyproject.toml  requirements.txt
dirac/: AGENTS.md  __init__.py  types.py
dirac/api/: AGENTS.md  app.py
dirac/command/: AGENTS.md  __init__.py  parser.py  service.py
dirac/config/: AGENTS.md  __init__.py  base.py  file_config.py
dirac/consolidation/: AGENTS.md  __init__.py  audit.py  service.py
dirac/context/: AGENTS.md  __init__.py  assembler.py  filters.py  runtime_notes.py
dirac/discord/: AGENTS.md  __init__.py  adapter.py  identity.py
dirac/doctor/: AGENTS.md  cli.py
dirac/log/: AGENTS.md  __init__.py  base.py  console.py  noop.py  redaction.py
dirac/memory/: AGENTS.md  __init__.py  base.py  contracts.py  tools.py
dirac/permission/: AGENTS.md  __init__.py  service.py
dirac/provider/: AGENTS.md  __init__.py  base.py  fake.py  ollama.py  openai_compatible.py  openrouter.py  parameters.py  routing.py
dirac/task/: AGENTS.md  __init__.py  scheduler.py  service.py
dirac/tool/: AGENTS.md  __init__.py  executor.py  registry.py
tests/: AGENTS.md  test_context_filters.py  test_memory_contract.py  test_provider_fake.py  test_provider_parameters.py  test_task_scheduler.py
web/: AGENTS.md  README.md
web/src/api/: client.ts
