[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirac"
version = "0.0.0"
description = "Modular Python runtime for Discord-centered agent work."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "discord.py-self>=2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dirac*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
